Logtalk/examples/errors/catdynpred.lgt

:- category(catdynpred).


	:- public(dynpred/1).
	:- dynamic(dynpred/1).


	dynpred(1).
	dynpred(2).
	dynpred(3).


:- end_object.
